[gd_scene load_steps=3 format=3 uid="uid://brde4ya3oi4in"]

[ext_resource type="Script" uid="uid://yqf04bp712gk" path="res://game/ui/auth_screen/auth_screen.gd" id="1_rohjo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bisp3"]
bg_color = Color(0.3137255, 0.3137255, 0.3137255, 1)

[node name="AuthScreen" type="CanvasLayer"]
layer = 100
script = ExtResource("1_rohjo")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bisp3")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LoginContainer" type="CenterContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/LoginContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/HBoxContainer/LoginContainer/VBoxContainer"]
layout_mode = 2
text = "LOGIN"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="Panel/HBoxContainer/LoginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Username"

[node name="LineEdit2" type="LineEdit" parent="Panel/HBoxContainer/LoginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Password"

[node name="Button" type="Button" parent="Panel/HBoxContainer/LoginContainer/VBoxContainer"]
layout_mode = 2
text = "Login"

[node name="RegisterContainer" type="CenterContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/RegisterContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/HBoxContainer/RegisterContainer/VBoxContainer"]
layout_mode = 2
text = "REGISTER"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="Panel/HBoxContainer/RegisterContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Username"

[node name="LineEdit2" type="LineEdit" parent="Panel/HBoxContainer/RegisterContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Password"

[node name="Button" type="Button" parent="Panel/HBoxContainer/RegisterContainer/VBoxContainer"]
layout_mode = 2
text = "Register"

[connection signal="pressed" from="Panel/HBoxContainer/LoginContainer/VBoxContainer/Button" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/RegisterContainer/VBoxContainer/Button" to="." method="_on_register_button_pressed"]
